@@ -1,6 +1,10 @@
 1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+	* Zone.m ([Zone_c -describe:]): Cast all counts to unsigned long
+	and use %lu specifier.
+
 	* Zone.h: Use size_t instead of unsigned for return of getPageSize.
+	(Zone_c): Use size_t for all counts.
 
 	* FCall.m (ffi_types, avcall_add_primitive): Protect per
 	USE_AVCALL.
